# everyone_nodong_tgbot

./: .env.local.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
everyone_nodong_bot/: main.py
